--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/wellpinho/tdd-jest-nodejs/issues"
   },
-  "homepage": "https://github.com/wellpinho/tdd-jest-nodejs#readme"
+  "homepage": "https://github.com/wellpinho/tdd-jest-nodejs#readme",
+  "devDependencies": {
+    "@types/node": "^16.10.2",
+    "typescript": "^4.4.3"
+  }
 }
