--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/wellpinho/tdd-jest-nodejs.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Wellington Pinho",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wellpinho/tdd-jest-nodejs/issues"
@@ -19,6 +19,12 @@
   "homepage": "https://github.com/wellpinho/tdd-jest-nodejs#readme",
   "devDependencies": {
     "@types/node": "^16.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "typescript": "^4.4.3"
   }
 }
