--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Development with tests using Jest with Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wellpinho/tdd-jest-nodejs#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "eslint": "^7.32.0",
@@ -25,6 +26,8 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "jest": "^27.2.4",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   }
 }
