--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Development with tests using Jest with Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "test:staged": "jest --passWithNoTests"
   },
   "repository": {
